Trying to fix totalhits propagation